fix test for filters events in the timeline miw-upm/goa#60